--- a/style.css
+++ b/style.css
@@ -59,5 +59,8 @@ h2 {
     background-color: #d32f2f;
 }
 #india {
-    background-color: #d32f2f;
+    background-color: #13ffff;
+}
+#USA {
+    background-color: #d32f3f;
 }
